--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Helvetica Neue, Arial;
     font-size: 18px;
@@ -10,14 +16,17 @@ h1, h2 {
 
 h1 {
     font-size: 40px;
+    margin-bottom: 20px;
 }
 
 h2 {
     font-size: 25px;
+    margin-bottom: 10px;
 }
 
 .main-text {
     text-align: justify;
+    margin-bottom: 20px;
 }
 
 .author-text {
