--- a/style.css
+++ b/style.css
@@ -32,3 +32,9 @@ h2 {
 .author-text {
     font-size: 22px;
 }
+
+.container {
+    width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
+}
