--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ h1 {
     margin-bottom: 20px;
 }
 
+
+
 h2 {
     font-size: 25px;
     margin-bottom: 10px;
@@ -33,8 +35,21 @@ h2 {
     font-size: 22px;
 }
 
+
 .container {
     width: 1140px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.blog-post {
+    background-color: #0000ff;
+}
+
+.other-post {
+    background-color: #00ff00;
+}
+
+.author-box {
+    background-color: #ffff00;
 }
