--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 body {
     font-family: Helvetica Neue, Arial;
     font-size: 18px;
@@ -44,10 +50,14 @@ h2 {
 
 .blog-post {
     background-color: #0000ff;
+    width: 75%;
+    float: left;
 }
 
 .other-post {
     background-color: #00ff00;
+    width: 25%;
+    float: left;
 }
 
 .author-box {
