--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ h2 {
 
 .author-text {
     font-size: 22px;
+    float: left;
+    margin-top: 30px;
+    margin-left: 10px;
 }
 
 .container {
@@ -58,4 +61,14 @@ h2 {
 .author-box {
   padding-top: 20px;
   border-top: 1px solid #9f9696;
+}
+
+.other {
+  margin-bottom: 40px;
+}
+
+.author-box img {
+  height: 100px;
+  border-radius: 50%;
+  float: left;
 }
