moved image into next paragraph, adjusted height/width of img using .blog-post img in style

--- a/style.css
+++ b/style.css
@@ -69,6 +69,12 @@ h2 {
 
 .author-box img {
   height: 100px;
+  width: auto;
   border-radius: 50%;
   float: left;
+}
+
+.blog-post img {
+  height: 150px;
+  width: auto;
 }
