--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ h2 {
     width: 75%;
     float: left;
     padding-right: 30px;
+    position: relative;
 }
 
 .other-post {
@@ -77,4 +78,10 @@ h2 {
 .blog-post img {
   height: 150px;
   width: auto;
+}
+
+.date {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
